[gd_scene load_steps=10 format=3 uid="uid://ck5n1t8ru2p8w"]

[ext_resource type="Script" path="res://scripts/ui/level_prompt_ui.gd" id="1_715gh"]
[ext_resource type="Texture2D" uid="uid://dexf1yf65dbcw" path="res://assets/art/ui/Background.png" id="2_v72tu"]
[ext_resource type="FontFile" uid="uid://cqnxrg3bj1fb1" path="res://assets/font/FrederickatheGreat-Regular.ttf" id="3_us4ms"]
[ext_resource type="Texture2D" uid="uid://dgn1ph8f6lqar" path="res://assets/art/ui/Star_Blank.png" id="4_xvptr"]
[ext_resource type="Texture2D" uid="uid://bmq40h8pkj7ot" path="res://assets/art/ui/Star_Normal.png" id="5_vmr44"]
[ext_resource type="Texture2D" uid="uid://luyg0f0xf2ii" path="res://assets/art/ui/Button_Normal.png" id="6_2o6am"]
[ext_resource type="Texture2D" uid="uid://bfbshdptqf380" path="res://assets/art/ui/Button_Pressed.png" id="7_5l0tn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5ku2h"]
texture = ExtResource("4_xvptr")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2b0yb"]
texture = ExtResource("5_vmr44")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="LevelPromptUI" type="CanvasLayer"]
layer = 2
script = ExtResource("1_715gh")

[node name="DarkenRect" type="ColorRect" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.737255)

[node name="GameOverContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="Background" type="TextureRect" parent="GameOverContainer"]
custom_minimum_size = Vector2(640, 320)
layout_mode = 2
texture = ExtResource("2_v72tu")

[node name="MarginContainer" type="MarginContainer" parent="GameOverContainer/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 125

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverContainer/Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TitleLabel" type="Label" parent="GameOverContainer/Background/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_us4ms")
theme_override_font_sizes/font_size = 24
text = "Faith falters and dissenters thrive.
Your reign ends."
horizontal_alignment = 1
uppercase = true

[node name="ButtonContainer" type="HBoxContainer" parent="GameOverContainer/Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="RestartButton" type="TextureButton" parent="GameOverContainer/Background/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("6_2o6am")
texture_pressed = ExtResource("7_5l0tn")
texture_hover = ExtResource("7_5l0tn")

[node name="NextLabel" type="Label" parent="GameOverContainer/Background/MarginContainer/VBoxContainer/ButtonContainer/RestartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -15.0
offset_right = 24.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_us4ms")
theme_override_font_sizes/font_size = 24
text = "Rewind"
horizontal_alignment = 1

[node name="MenuButton" type="TextureButton" parent="GameOverContainer/Background/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("6_2o6am")
texture_pressed = ExtResource("7_5l0tn")
texture_hover = ExtResource("7_5l0tn")

[node name="NextLabel" type="Label" parent="GameOverContainer/Background/MarginContainer/VBoxContainer/ButtonContainer/MenuButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -15.0
offset_right = 24.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_us4ms")
theme_override_font_sizes/font_size = 24
text = "Menu"
horizontal_alignment = 1

[node name="LevelCompleteContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="TextureRect" parent="LevelCompleteContainer"]
custom_minimum_size = Vector2(640, 320)
layout_mode = 2
texture = ExtResource("2_v72tu")

[node name="MarginContainer" type="MarginContainer" parent="LevelCompleteContainer/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 46

[node name="VBoxContainer" type="VBoxContainer" parent="LevelCompleteContainer/Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LevelCompleteLabel" type="Label" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_us4ms")
theme_override_font_sizes/font_size = 24
text = "Dissent is no more-- 
but at what price?"
horizontal_alignment = 1
uppercase = true

[node name="StarProgress" type="ProgressBar" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxTexture_5ku2h")
theme_override_styles/fill = SubResource("StyleBoxTexture_2b0yb")
value = 41.34
show_percentage = false

[node name="ScoresContainer" type="HBoxContainer" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 32

[node name="ScoreTitleContainer" type="VBoxContainer" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer/ScoresContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer/ScoresContainer/ScoreTitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_us4ms")
text = "Innocents Killed Penalty:"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer/ScoresContainer/ScoreTitleContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("3_us4ms")
text = "Doubters Killed Penalty:"

[node name="Label3" type="Label" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer/ScoresContainer/ScoreTitleContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("3_us4ms")
text = "Total Penalty:"
horizontal_alignment = 1

[node name="ScoreValueContainer" type="VBoxContainer" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer/ScoresContainer"]
layout_mode = 2

[node name="InnocentsValueLabel" type="Label" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer/ScoresContainer/ScoreValueContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_us4ms")
text = "-100pts x 10 = -1000pts"
horizontal_alignment = 1

[node name="DoubtersValueLabel" type="Label" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer/ScoresContainer/ScoreValueContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_us4ms")
text = "-100pts x 10 = -1000pts"
horizontal_alignment = 2

[node name="TotalValueLabel" type="Label" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer/ScoresContainer/ScoreValueContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_us4ms")
text = "-100pts x 10 = -1000pts"
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 32

[node name="NextButton" type="TextureButton" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
texture_normal = ExtResource("6_2o6am")
texture_pressed = ExtResource("7_5l0tn")
texture_hover = ExtResource("7_5l0tn")

[node name="NextLabel" type="Label" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer/ButtonsContainer/NextButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -15.0
offset_right = 24.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_us4ms")
theme_override_font_sizes/font_size = 24
text = "Next"
horizontal_alignment = 1

[node name="RetryButton" type="TextureButton" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
texture_normal = ExtResource("6_2o6am")
texture_pressed = ExtResource("7_5l0tn")
texture_hover = ExtResource("7_5l0tn")

[node name="RetryLabel" type="Label" parent="LevelCompleteContainer/Background/MarginContainer/VBoxContainer/ButtonsContainer/RetryButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -15.0
offset_right = 24.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_us4ms")
theme_override_font_sizes/font_size = 24
text = "Retry"
horizontal_alignment = 1

[connection signal="pressed" from="GameOverContainer/Background/MarginContainer/VBoxContainer/ButtonContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverContainer/Background/MarginContainer/VBoxContainer/ButtonContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="LevelCompleteContainer/Background/MarginContainer/VBoxContainer/ButtonsContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="LevelCompleteContainer/Background/MarginContainer/VBoxContainer/ButtonsContainer/RetryButton" to="." method="_on_retry_button_pressed"]
